// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management design version dropdown component renders design version dropdown button 1`] = `
<gl-base-dropdown-stub
  ariahaspopup="listbox"
  category="primary"
  icon=""
  issueiid=""
  projectpath=""
  size="small"
  toggleid="dropdown-toggle-btn-2"
  toggletext="Showing latest version"
  variant="default"
>
   
  <!---->
   
  <!---->
   
  <ul
    aria-labelledby="dropdown-toggle-btn-2"
    class="gl-dropdown-contents gl-list-style-none gl-pl-0 gl-mb-0"
    id="listbox"
    role="listbox"
    tabindex="-1"
  >
    <gl-listbox-item-stub
      data-testid="listbox-item-gid://gitlab/DesignManagement::Version/1"
      ischeckcentered="true"
    >
      <span
        class="gl-display-flex gl-align-items-center"
      >
        <div
          class="gl-avatar gl-avatar-identicon gl-avatar-circle gl-avatar-s32 gl-avatar-identicon-bg1"
        >
          
  

        </div>
         
        <span
          class="gl-display-flex gl-flex-direction-column"
        >
          <span
            class="gl-font-weight-bold"
          >
            Version 2 (latest)
          </span>
           
          <span
            class="gl-text-gray-600 gl-mt-1"
          >
            <span
              class="gl-display-block"
            >
              Adminstrator
            </span>
             
            <time-ago-stub
              class="text-1"
              cssclass=""
              time="2021-08-09T06:05:00Z"
              tooltipplacement="bottom"
            />
          </span>
        </span>
      </span>
    </gl-listbox-item-stub>
    <gl-listbox-item-stub
      data-testid="listbox-item-gid://gitlab/DesignManagement::Version/2"
      ischeckcentered="true"
    >
      <span
        class="gl-display-flex gl-align-items-center"
      >
        <div
          class="gl-avatar gl-avatar-identicon gl-avatar-circle gl-avatar-s32 gl-avatar-identicon-bg1"
        >
          
  

        </div>
         
        <span
          class="gl-display-flex gl-flex-direction-column"
        >
          <span
            class="gl-font-weight-bold"
          >
            Version 1
          </span>
           
          <span
            class="gl-text-gray-600 gl-mt-1"
          >
            <span
              class="gl-display-block"
            >
              Adminstrator
            </span>
             
            <time-ago-stub
              class="text-1"
              cssclass=""
              time="2021-08-09T06:05:00Z"
              tooltipplacement="bottom"
            />
          </span>
        </span>
      </span>
    </gl-listbox-item-stub>
     
    <!---->
     
    <!---->
  </ul>
   
  <!---->
   
</gl-base-dropdown-stub>
`;

exports[`Design management design version dropdown component renders design version list 1`] = `
<gl-base-dropdown-stub
  ariahaspopup="listbox"
  category="primary"
  icon=""
  issueiid=""
  projectpath=""
  size="small"
  toggleid="dropdown-toggle-btn-4"
  toggletext="Showing latest version"
  variant="default"
>
   
  <!---->
   
  <!---->
   
  <ul
    aria-labelledby="dropdown-toggle-btn-4"
    class="gl-dropdown-contents gl-list-style-none gl-pl-0 gl-mb-0"
    id="listbox"
    role="listbox"
    tabindex="-1"
  >
    <gl-listbox-item-stub
      data-testid="listbox-item-gid://gitlab/DesignManagement::Version/1"
      ischeckcentered="true"
    >
      <span
        class="gl-display-flex gl-align-items-center"
      >
        <div
          class="gl-avatar gl-avatar-identicon gl-avatar-circle gl-avatar-s32 gl-avatar-identicon-bg1"
        >
          
  

        </div>
         
        <span
          class="gl-display-flex gl-flex-direction-column"
        >
          <span
            class="gl-font-weight-bold"
          >
            Version 2 (latest)
          </span>
           
          <span
            class="gl-text-gray-600 gl-mt-1"
          >
            <span
              class="gl-display-block"
            >
              Adminstrator
            </span>
             
            <time-ago-stub
              class="text-1"
              cssclass=""
              time="2021-08-09T06:05:00Z"
              tooltipplacement="bottom"
            />
          </span>
        </span>
      </span>
    </gl-listbox-item-stub>
    <gl-listbox-item-stub
      data-testid="listbox-item-gid://gitlab/DesignManagement::Version/2"
      ischeckcentered="true"
    >
      <span
        class="gl-display-flex gl-align-items-center"
      >
        <div
          class="gl-avatar gl-avatar-identicon gl-avatar-circle gl-avatar-s32 gl-avatar-identicon-bg1"
        >
          
  

        </div>
         
        <span
          class="gl-display-flex gl-flex-direction-column"
        >
          <span
            class="gl-font-weight-bold"
          >
            Version 1
          </span>
           
          <span
            class="gl-text-gray-600 gl-mt-1"
          >
            <span
              class="gl-display-block"
            >
              Adminstrator
            </span>
             
            <time-ago-stub
              class="text-1"
              cssclass=""
              time="2021-08-09T06:05:00Z"
              tooltipplacement="bottom"
            />
          </span>
        </span>
      </span>
    </gl-listbox-item-stub>
     
    <!---->
     
    <!---->
  </ul>
   
  <!---->
   
</gl-base-dropdown-stub>
`;
